--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <a class="nav-link" href="#5">About us</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link disabled" href="#">Premium</a>
+        <a class="nav-link disabled" href="#" tile="Close for somedays">Orrder Now</a>
       </li>
     </ul>
   </div>
