--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <a class="nav-link" href="#5">About us</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link disabled" href="#" tile="Close for somedays">Orrder Now</a>
+        <a class="nav-link disabled" href="#">Order now</a>
       </li>
     </ul>
   </div>
@@ -104,7 +104,8 @@
           <div class="col-lg-6 col-md-6 col-12 my-4">
             <p style="font-size: 20px;" data-aos="flip-left">1. Our First <b>Website</b> is Live in Server Please Check it out <a href="">Click here. </a></p>
             <hr class="w-100 "> <br>
-            <p style="font-size: 20px;">2. This <b>Website</b> is delay because of <b>Diwali.</b></p> <hr class="w-100">
+            <p style="font-size: 20px;">2. This <b>Website</b> is delay because of <b>Diwali.</b></p> <hr class="w-100"> <br>
+            <p style="font-size: 20px;">3.Order will be Disable for Some days. </b></p> <hr class="w-100">
           </div>
         </div>
   
@@ -119,7 +120,7 @@
   </div>
   <div class="flex">
     <div class="col-lg-6 col-md-6 col-12 my-4">
-      <p style="font-size: 25px;">This all are created by our <b>Team.</b>Please Give Support.</p> <hr class="w-100"> <br>
+      <p style="font-size: 25px;">This all are created by our <b>Team.</b>Please Give Support.For Download Hold the images then you get the downoad option.For Computer right mouse button.</p> <hr class="w-100"> <br>
     </div>
   </div>
 
@@ -127,7 +128,19 @@
     <img src="img/1.jpg" style="width: 25%; margin-left: 2%">
 
       <img src="img/2.jpg" style="width: 25%; margin-left: 2%; ">
+
+        <img src="img/3.jpg" style="width: 25%; margin-left: 2%">
+
+      <img src="img/4.jpg" style="width: 25%; margin-left: 2%; ">
+
+         <img src="img/6.jpg" style="width: 25%; margin-left: 2%">
+
+      <img src="img/5.jpg" style="width: 25%; margin-left: 2%; margin-top: 3%; ">
+
   </div>
+
+    
+
 
 </section>
 
@@ -212,6 +225,8 @@
     <label for="exampleFormControlTextarea1">Define your Issue</label>
     <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
   </div>
+
+  <button class="btn btn-primary" onclick="popup()">Submit</button>
 </form>
 
   </div>
@@ -263,6 +278,11 @@
 
 <script>
   AOS.init();
+</script>
+<script>
+  function popup(){
+      alert("We are sorry for your bad Experince,We will Fix it Soon!")
+  }
 </script>
 
 </body>
