--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
 
 
 
-<section class="Service my-5 bg-light" id="4">
+<section class="Service my-5" id="4">
   <div class="container text-center">
     <div>
       <h3 data-aos="fade-up" >Contact us and Issues </h3>
