--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
   </div>
  <div class="form-group">
     <label for="exampleFormControlInput1">E-mail</label>
-    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="example@exampe.xyz">
+    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="example@example.xyz">
   </div>
   <div class="form-group">
     <label for="exampleFormControlSelect2">select Your Issues</label>
