--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
 <form>
   <div class="form-group">
     <label for="exampleFormControlInput1">Username</label>
-    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Enter Your Username">
+    <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Enter Your Username">
   </div>
  <div class="form-group">
     <label for="exampleFormControlInput1">E-mail</label>
