--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <a class="nav-link" href="#5">About us</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link disabled" href="#">Order now</a>
+        <a class="nav-link enabled" href="https://webinfluencers.github.io/Form.pro/">Order now</a>
       </li>
     </ul>
   </div>
@@ -192,7 +192,7 @@
 
 
 
-<section class="Service my-5" id="4">
+<section class="Service my-5 bg-light" id="4">
   <div class="container text-center">
     <div>
       <h3 data-aos="fade-up" >Contact us and Issues </h3>
@@ -205,11 +205,11 @@
 <form>
   <div class="form-group">
     <label for="exampleFormControlInput1">Username</label>
-    <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Enter Your Username">
+    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Enter Your Username">
   </div>
  <div class="form-group">
     <label for="exampleFormControlInput1">E-mail</label>
-    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="example@example.xyz">
+    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="example@exampe.xyz">
   </div>
   <div class="form-group">
     <label for="exampleFormControlSelect2">select Your Issues</label>
