--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             <p style="font-size: 20px;" data-aos="flip-left">1. Our First <b>Website</b> is Live in Server Please Check it out <a href="">Click here. </a></p>
             <hr class="w-100 "> <br>
             <p style="font-size: 20px;">2. This <b>Website</b> is delay because of <b>Diwali.</b></p> <hr class="w-100"> <br>
-            <p style="font-size: 20px;">3.Order will be Disable for Some days. </b></p> <hr class="w-100">
+            <p style="font-size: 20px;"> </b></p> <hr class="w-100">
           </div>
         </div>
   
